tests/snapshots/adapters__codex_rollback.snap
---
source: tests/adapters.rs
expression: summarize(& session)
---
{
  "active": [
    {
      "detail": "add a --json flag to list",
      "evt": 0,
      "kind": "user_message",
      "stream": 0
    },
    {
      "detail": "apply_patch (Edit) {\"input\":\"*** Begin Patch\\n*** Update File: src/cli/discover.rs\\n@@\\n+json: bool,\\n*** End Patch\\n\"}",
      "evt": 1,
      "kind": "tool_call",
      "stream": 0
    },
    {
      "detail": "error=Some(false) exit=Some(0) {\"exit_code\":0,\"output\":\"Success.\",\"success\":true}",
      "evt": 2,
      "kind": "tool_result",
      "stream": 0
    },
    {
      "detail": "no xml, ship the json flag",
      "evt": 7,
      "kind": "user_message",
      "stream": 0
    },
    {
      "detail": "Dropped the xml work; --json is in place.",
      "evt": 8,
      "kind": "assistant_text",
      "stream": 0
    }
  ],
  "active_indices": [
    0,
    1,
    2,
    7,
    8
  ],
  "agent": "codex",
  "diagnostics": [],
  "events": 9,
  "id": "6f1a2b3c-4d5e-6f70-8192-a3b4c5d6e7f8",
  "kind_counts": {
    "assistant_text": 1,
    "tool_call": 1,
    "tool_result": 1,
    "user_message": 2
  },
  "meta": {
    "agent_version": "0.58.0",
    "cwd": "/home/dev/sctxx",
    "ended_at": "2026-09-01T08:00:00.000Z",
    "git_branch": "main",
    "started_at": "2026-09-01T08:00:00.000Z"
  },
  "native_compactions": [],
  "user_turns": 2
}
